# open-kylin

./: LICENSE  README.md  pyproject.toml
.codebuddy/plans/: OpenKylin_-_轻量级模块化AI智能体框架_6ea51c17.md
examples/: basic_agent.py
openkylin/: __init__.py
openkylin-web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
openkylin-web/src/: App.tsx  index.css
openkylin-web/src/components/: Layout.tsx  Sidebar.tsx
openkylin-web/src/lib/: utils.ts
openkylin-web/src/pages/: Dashboard.tsx  Knowledge.tsx  Plugins.tsx  Sessions.tsx  Settings.tsx
openkylin-web/src/store/: index.ts
openkylin-web/src/types/: index.ts
openkylin/clients/: __init__.py
openkylin/clients/cli/: __init__.py  main.py
openkylin/core/: __init__.py  agent.py  event.py  message.py  plugin.py  router.py
openkylin/extensions/: __init__.py
openkylin/extensions/channels/: __init__.py  base.py  console.py  dingtalk.py
openkylin/extensions/memory/: __init__.py  long_term.py  short_term.py
openkylin/extensions/providers/: __init__.py  base.py  ollama.py  openai.py
openkylin/extensions/tools/: __init__.py  base.py  registry.py  skill_loader.py
openkylin/services/: __init__.py
openkylin/services/rag/: __init__.py  retriever.py  vector_store.py
openkylin/services/workflow/: __init__.py  dag.py  executor.py
